--- a/harmony/progress_view/oh-package.json5
+++ b/harmony/progress_view/oh-package.json5
@@ -1,12 +1,13 @@
 {
   "license": "MIT",
   "devDependencies": {
-    "rnoh": "file:../rnoh"
   },
   "author": "Huawei",
   "name": "rnoh-progress-view",
   "description": "progress-view for HarmonyOS",
   "main": "index.ets",
-  "version": "0.0.1",
-  "dependencies": {}
+  "version": "1.4.2-0.0.4",
+  "dependencies": {
+    "rnoh": "file:../rnoh"
+  }
 }
