添加oh_package.json的version和name，适配@rnoh/react-native-openharmony
Signed-off-by: leehom <llh_01129@163.com>

--- a/harmony/progress_view/oh-package.json5
+++ b/harmony/progress_view/oh-package.json5
@@ -3,11 +3,11 @@
   "devDependencies": {
   },
   "author": "Huawei",
-  "name": "rnoh-progress-view",
+  "name": "@react-native-oh-library/progress-view",
+  "version": "1.4.2-0.0.5",
   "description": "progress-view for HarmonyOS",
   "main": "index.ets",
-  "version": "1.4.2-0.0.4",
   "dependencies": {
-    "rnoh": "file:../rnoh"
+    "@rnoh/react-native-openharmony": "file:../react_native_openharmony"
   }
 }
